# systile

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  HOLOGRAPHIC.md  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: lattice_bench.rs  pillars_bench.rs
examples/: attention_retrieval.rs  automaton_divisibility.rs  bf16_roundtrip.rs  bloom_membership.rs  capstone_rag.rs  classifier_demo.rs  conv_search.rs  dft_spectrum.rs  edit_distance.rs  graph_paths.rs  holo_analogy.rs  holo_capacity.rs  holo_kv.rs  holo_precision.rs  index_search.rs  padding_inspect.rs  pagerank_demo.rs  quantize_matmul.rs  quickstart.rs  resonator_factor.rs  scan_prefix.rs  sketch_frequency.rs  sort_by_matmul.rs  sparsity_report.rs  topk_select.rs  viterbi_decode.rs
src/: attention.rs  automaton.rs  bf16.rs  bloom.rs  classifier.rs  codebook.rs  conv.rs  dft.rs  editdist.rs  elementwise.rs  error.rs  geometry.rs  graph.rs  holo.rs  holoset.rs  hyper.rs  index.rs  iter.rs  lattice.rs  layout.rs  lib.rs  mask.rs  pagerank.rs  prelude.rs  quantize.rs  reduce.rs  resonator.rs  scan.rs  semiring.rs  sequence.rs  shape.rs  sketch.rs  sort.rs  sparse.rs  systolic.rs  topk.rs  transpose.rs  viterbi.rs
tests/: analogy_tests.rs  attention_tests.rs  automaton_tests.rs  bf16_tests.rs  bloom_tests.rs  classifier_tests.rs  codebook_tests.rs  conv_tests.rs  dft_tests.rs  editdist_tests.rs  elementwise_tests.rs  geometry_tests.rs  graph_tests.rs  holo_tests.rs  holoset_tests.rs  hyper_tests.rs  index_tests.rs  integration_tests.rs  lattice_tests.rs  layout_tests.rs  matmul_tests.rs  pagerank_tests.rs  quantize_tests.rs  reduce_tests.rs  resonator_tests.rs  scan_tests.rs  sequence_tests.rs  sketch_tests.rs  sort_tests.rs  sparse_tests.rs  topk_tests.rs  transpose_tests.rs  viterbi_tests.rs
