[package]
name = "systile"
version = "1.0.0"
edition = "2021"
rust-version = "1.74"
description = "Matmul-native data structures & algorithms: 17 structures (holographic memory, semiring graphs, automata, attention, DFT, Viterbi, k-NN, Bloom, sort, scan, …) whose core operation reduces to a dense matmul, built on a TPU-style tiled tensor with a systolic reference engine."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bajpainaman/systile"
homepage = "https://github.com/bajpainaman/systile"
documentation = "https://docs.rs/systile"
readme = "README.md"
keywords = ["tpu", "tensor", "matmul", "data-structures", "systolic"]
categories = ["data-structures", "science", "hardware-support", "algorithms"]
exclude = ["/.github", "/scripts"]

[features]
default = ["std"]
std = []
# Enable extra invariant checks on every lattice operation (slow, for debugging layouts).
paranoid = []

[lib]
name = "systile"
path = "src/lib.rs"

[[bench]]
name = "lattice_bench"
harness = false

[[bench]]
name = "pillars_bench"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
